added response to admin buttons

--- a/app/src/main/resources/admin/orders/templates/order.html
+++ b/app/src/main/resources/admin/orders/templates/order.html
@@ -5,6 +5,7 @@
 
 <body class="page-wrapper">
     <header class="header" data-th-utext="${pageComponents.header}"></header>
+    <header class="header" data-th-utext="${pageComponents.loginRegisterModal}"></header>
     <main class="main">
         <div class="site_width">
             <a href="/orders" class="checkout-back">Back to list</a>
