--- a/app/src/main/resources/site/pages/components/footers/footerScripts.html
+++ b/app/src/main/resources/site/pages/components/footers/footerScripts.html
@@ -11,8 +11,8 @@
 <script type="text/javascript" data-th-inline="javascript" data-th-if="${contentServiceUrl}">
     var contentServiceUrl = [[${contentServiceUrl}]];
 </script>
-<script type="text/javascript" data-th-inline="javascript" data-th-if="${cartServiceUrl}">
-    var cartServiceUrl = [[${cartServiceUrl}]];
+<script type="text/javascript" data-th-inline="javascript" data-th-if="${updateCartUrl}">
+    var updateCartUrl = [[${updateCartUrl}]];
 </script>
 <script type="text/javascript" data-th-inline="javascript" data-th-if="${commentsServiceUrl}">
     var commentsServiceUrl = [[${commentsServiceUrl}]];
