--- a/app/src/main/resources/admin/orders/templates/ordersList.html
+++ b/app/src/main/resources/admin/orders/templates/ordersList.html
@@ -5,16 +5,16 @@
 
 <body>
     <header class="header" data-th-utext="${pageComponents.header}"></header>
-    <main class="main">
+    <main class="main admin-wrap">
         <div class="site_width">
             <div class="orders">
                 <div class="orders-search">
-                    <form method="GET">
-                        <div class="form-group">
-                            <label class="order-label">Search</label>
-                            <input data-th-value="${params.search}" name="search" type="text" class="input-text" />
-                        </div>
+                    <form class="orders-search" method="GET">
                         <div class="form-group-column">
+                            <div class="form-group">
+                                <label class="order-label">Search</label>
+                                <input data-th-value="${params.search}" name="search" type="text" class="input-text" />
+                            </div>
                             <div class="form-group">
                                 <label for="country-checkout-select" class="label">СТРАНА</label>
                                 <div class="select-field">
@@ -74,11 +74,11 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="checkout-continue">
-                                Apply filters
-                            </button>
+                            <div class="form-group orders-search-action">
+                                <button type="submit" class="button-light checkout-continue">
+                                    Apply filters
+                                </button>
+                            </div>
                         </div>
                     </form>
                 </div>
