--- a/frontend/app/scss/base/_buttons.scss
+++ b/frontend/app/scss/base/_buttons.scss
@@ -62,6 +62,16 @@
             }
         }
 
+        @if $style==secondary {
+            color: $color-primary17;
+            border-color: $color-primary17;
+            background: $color-primary1;
+
+            &:hover {
+                background: darken($color-primary1, 5%);
+            }
+        }
+
         @if $style==white {
             box-shadow: 0 5px 15px 0 rgba($color-primary21, 0.05);
             background-color: $color-primary1;
@@ -153,4 +163,12 @@
 
 .button-dark {
     @include button-style(global dark);
+}
+
+.button-secondary {
+    @include button-style(global secondary);
+}
+
+.button-link {
+    @include button-style(reset link);
 }
