--- a/app/src/main/resources/services/checkout/templates/stepOne.html
+++ b/app/src/main/resources/services/checkout/templates/stepOne.html
@@ -1,5 +1,5 @@
 <h2 class="checkout-title">Ваша информация</h2>
-<form class="checkout-form js_checkout-form" method="POST" data-th-action="${checkoutUrl}">
+<form class="checkout-form js_checkout-form" method="POST" action="/checkout/shipping">
     <div class="form-group-column">
         <div class="form-group">
             <label for="name-checkout-input" class="label">ИМЯ</label>
