--- a/app/src/main/resources/services/checkout/templates/stepTwo.html
+++ b/app/src/main/resources/services/checkout/templates/stepTwo.html
@@ -47,6 +47,7 @@
                 <option disabled="disabled" selected="selected">Выберите отделение</option>
             </select>
         </div>
+        <input type="hidden" class="js_novaPoshtaWarehouseId" name="novaPoshtaWarehouseId" />
     </div>
     <div class="checkout-action">
         <a data-th-href="${cartUrl}" class="checkout-back" title="К покупкам">К покупкам</a>
