Statics page grid

--- a/frontend/app/scss/main.scss
+++ b/frontend/app/scss/main.scss
@@ -47,7 +47,7 @@
 @import "pages/article";
 @import "pages/plp";
 @import "pages/filters";
-@import "pages/admin";
+@import "pages/admin/all";
 @import "pages/searchpage";
 @import "pages/gameReg";
 @import "pages/viewOrders";
