--- a/app/src/main/resources/site/pages/components/blog/loadMore.html
+++ b/app/src/main/resources/site/pages/components/blog/loadMore.html
@@ -2,8 +2,9 @@
     data-th-text="${portal.localize({'_key=blog.loadMoreText', '_locale=ru'})}"></button>
 <div class="blog-list-empty js_blog-list-empty"
     data-th-text="${portal.localize({'_key=user.title.' + noMoreTitle + '.noMore', '_locale=ru'})}"
-    data-th-classappend="${articlesCount >= pageSize or hideIfNone ? 'hidden' : ''}"></div>
-<div class="lds-ring js_blog-list-lazyload-icon">
+    data-th-classappend="${(articlesCount < pageSize) or hideIfNone ? '' : 'hidden'}"></div>
+<div class="lds-ring js_blog-list-lazyload-icon"
+    data-th-classappend="${(articlesCount < pageSize) or hideIfNone ? 'hidden' : ''}">
     <div></div>
     <div></div>
     <div></div>
