--- a/app/src/main/resources/admin/orders/templates/ordersList.html
+++ b/app/src/main/resources/admin/orders/templates/ordersList.html
@@ -20,27 +20,9 @@
                                 <div class="select-field">
                                     <select name="country" id="country-checkout-select">
                                         <option data-th-selected="${params.country == ''}" value="">All</option>
-                                        <option data-th-selected="${params.country == 'ua'}" value="ua">Украина</option>
-                                        <option data-th-selected="${params.country == 'by'}" value="by">Беларусь
-                                        </option>
-                                        <option data-th-selected="${params.country == 'ru'}" value="ru">Россия</option>
-                                        <option data-th-selected="${params.country == 'est'}" value="est">Эстония
-                                        </option>
-                                        <option data-th-selected="${params.country == 'lat'}" value="lat">Латвия
-                                        </option>
-                                        <option data-th-selected="${params.country == 'lit'}" value="lit">Литва</option>
-                                        <option data-th-selected="${params.country == 'ger'}" value="ger">Германия
-                                        </option>
-                                        <option data-th-selected="${params.country == 'hun'}" value="hun">Венгрия
-                                        </option>
-                                        <option data-th-selected="${params.country == 'che'}" value="che">Чехия</option>
-                                        <option data-th-selected="${params.country == 'slo'}" value="slo">Словакия
-                                        </option>
-                                        <option data-th-selected="${params.country == 'pol'}" value="pol">Польша
-                                        </option>
-                                        <option data-th-selected="${params.country == 'isr'}" value="isr">Израиль
-                                        </option>
-                                        <option data-th-selected="${params.country == 'other'}" value="other">Другие
+                                        <option data-th-value="${country.code}"
+                                            data-th-each="country: ${countries.countries}"
+                                            data-th-text="${portal.localize({'_key=countries.' + country.code, '_locale=ru'})}">
                                         </option>
                                     </select>
                                 </div>
