--- a/app/src/main/resources/services/checkout/templates/stepOne.html
+++ b/app/src/main/resources/services/checkout/templates/stepOne.html
@@ -3,25 +3,29 @@
     <div class="form-group-column">
         <div class="form-group">
             <label for="name-checkout-input" class="label">ИМЯ</label>
-            <input data-th-attr="value=${cart.name} ? ${cart.name} : ''" name="name" type="text" class="input-text"
-                id="name-checkout-input" required />
+            <input
+                data-th-value="${cart.name} ? ${cart.name} : (${user && user.data.firstName} ? ${user && user.data.firstName} : '')"
+                name="name" type="text" class="input-text" id="name-checkout-input" required />
         </div>
         <div class="form-group">
             <label for="surname-checkout-input" class="label">ФАМИЛИЯ</label>
-            <input required data-th-attr="value=${cart.surname} ? ${cart.surname} : ''" name="surname" type="text"
-                class="input-text" id="surname-checkout-input" />
+            <input required
+                data-th-value="${cart.surname} ? ${cart.surname} : (${user && user.data.lastName} ? ${user && user.data.lastName} : '')"
+                name="surname" type="text" class="input-text" id="surname-checkout-input" />
         </div>
     </div>
     <div class="form-group-column">
         <div class="form-group">
             <label for="address-checkout-input" class="label">АДРЕС</label>
-            <input required data-th-attr="value=${cart.address} ? ${cart.address} : ''" name="address" type="text"
-                class="input-text" id="address-checkout-input" />
+            <input required
+                data-th-attr="value=${cart.address} ? ${cart.address} : (${user && user.data.address} ? ${user && user.data.address} : '')"
+                name="address" type="text" class="input-text" id="address-checkout-input" />
         </div>
         <div class="form-group button_wrap-field">
             <label for="zip-checkout-input" class="label">ИНДЕКС</label>
             <button type="submit" class="button_wrap-btn hidden">НАЙТИ</button>
-            <input required name="index" type="text" data-th-attr="value=${cart.index} ? ${cart.index} : ''"
+            <input required name="index" type="text"
+                data-th-attr="value=${cart.index} ? ${cart.index} : (${user && user.data.postalCode} ? ${user && user.data.postalCode} : '')"
                 class="input-text button_wrap-input" id="zip-checkout-input" />
         </div>
     </div>
@@ -32,39 +36,31 @@
                 <select name="country" id="country-checkout-select" required>
                     <option value="Выберите страну" disabled="disabled" data-th-selected="${!cart.country}">Выберите
                         страну</option>
-                    <option data-th-selected="${cart.country == 'ua'}" value="ua">Украина</option>
-                    <option data-th-selected="${cart.country == 'by'}" value="by">Беларусь</option>
-                    <option data-th-selected="${cart.country == 'ru'}" value="ru">Россия</option>
-                    <option data-th-selected="${cart.country == 'est'}" value="est">Эстония</option>
-                    <option data-th-selected="${cart.country == 'lat'}" value="lat">Латвия</option>
-                    <option data-th-selected="${cart.country == 'lit'}" value="lit">Литва</option>
-                    <option data-th-selected="${cart.country == 'ger'}" value="ger">Германия</option>
-                    <option data-th-selected="${cart.country == 'hun'}" value="hun">Венгрия</option>
-                    <option data-th-selected="${cart.country == 'che'}" value="che">Чехия</option>
-                    <option data-th-selected="${cart.country == 'slo'}" value="slo">Словакия</option>
-                    <option data-th-selected="${cart.country == 'pol'}" value="pol">Польша</option>
-                    <option data-th-selected="${cart.country == 'isr'}" value="isr">Израиль</option>
-                    <option data-th-selected="${cart.country == 'au'}" value="au">Австрия</option>
-                    <option data-th-selected="${cart.country == 'other'}" value="other">Другие</option>
+                    <option data-th-value="${country.code}" data-th-each="country: ${countries.countries}"
+                        data-th-selected="${cart.country == country.code or (user && user.data.country == country.code)}"
+                        data-th-text="${portal.localize({'_key=countries.' + country.code, '_locale=ru'})}"></option>
                 </select>
             </div>
         </div>
         <div class="form-group">
             <label for="city-checkout-input" class="label">ГОРОД</label>
-            <input required data-th-attr="value=${cart.city} ? ${cart.city} : ''" name="city" type="text"
-                class="input-text" id="city-checkout-input" />
+            <input required
+                data-th-attr="value=${cart.city} ? ${cart.city} : (${user && user.data.city} ? ${user && user.data.city} : '')"
+                name="city" type="text" class="input-text" id="city-checkout-input" />
         </div>
     </div>
     <div class="form-group-column">
         <div class="form-group">
             <label for="email-checkout-input" class="label">ЭЛЕКТРОННАЯ ПОЧТА</label>
-            <input required data-th-attr="value=${cart.email} ? ${cart.email} : ''" name="email" type="email"
-                class="input-text" id="email-checkout-input" />
+            <input required
+                data-th-attr="value=${cart.email} ? ${cart.email} : (${user && user.data.email} ? ${user && user.data.email} : '')"
+                name="email" type="email" class="input-text" id="email-checkout-input" />
         </div>
         <div class="form-group">
             <label for="phone-checkout-input" class="label">ТЕЛЕФОН</label>
-            <input required data-th-attr="value=${cart.phone} ? ${cart.phone} : ''" name="phone" type="text"
-                class="input-text" id="phone-checkout-input" />
+            <input required
+                data-th-attr="value=${cart.phone} ? ${cart.phone} : (${user && user.data.phone} ? ${user && user.data.phone} : '')"
+                name="phone" type="text" class="input-text" id="phone-checkout-input" />
         </div>
     </div>
     <div class="form-group">
@@ -72,6 +68,10 @@
             hidden />
         <label for="agreement" class="label-checkbox">Я прочитал и принимаю
             <a data-th-href="${agreementPage}" target="_blank">условия пользования сайтом</a></label>
+    </div>
+    <div data-th-if="${user}" class="form-group">
+        <input name="saveUserData" type="checkbox" id="saveUserData" hidden />
+        <label for="saveUserData" class="label-checkbox">Сохранить мои данные для следующих покупок.</label>
     </div>
     <div class="checkout-action">
         <a data-th-href="${cartUrl}" class="checkout-back" title="К покупкам">К покупкам</a>
